--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@ p{
 .Sunny{
     font-weight: 500;
 }
+        
+.author{
+    color: #777777;
+    font-size: 20px;
+}
 
 .footer-body{
     max-width: 328px;
@@ -273,8 +278,8 @@ margin-bottom: 24px;
     </div>
     <hr>
 
-    <h2> <span class="Dear">Dear</span> Rebecca Cooper <br> <span class="Dear">one of my favourite sayings goes like this,</span></h2>
-    <h1>“Only those who attempt the absurd can achieve the impossible.”</h1>
+    <h2> <span class="Dear">Dear</span> Rebecca Cooper</h2>
+    <h1>“Only those who attempt the absurd can achieve the impossible.”<br><span class="author"><i>Albert Einstein</i></span></h1>
     <div  >
         <img class="MainIllustration" src="Work Achievement Illo.png">
     </div>
