--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ p{
 .Sunny{
     font-weight: 500;
 }
-        
+
 .author{
     color: #777777;
     font-size: 20px;
@@ -281,7 +281,7 @@ margin-bottom: 24px;
     <h2> <span class="Dear">Dear</span> Rebecca Cooper</h2>
     <h1>“Only those who attempt the absurd can achieve the impossible.”<br><span class="author"><i>Albert Einstein</i></span></h1>
     <div  >
-        <img class="MainIllustration" src="Work Achievement Illo.png">
+        <img class="MainIllustration" src="Emailer-Illustration-3.jpg">
     </div>
     <p class="hero-body"> Let me take this opportunity to congratulate you on your recent achievement. May you grow in strength and may your impact on the world leave indelible footprints. <br>
         <br>
