--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@ hr{
 .Signature {
     margin-top: 8px;
     margin-bottom: 8px;
+    max-width: 186px;
 
 }
 
@@ -290,7 +291,7 @@ margin-bottom: 24px;
         I look forward to many future collaborations.<br>
     <br>
     With warm regards,<br>
-    <img class="Signature" src="Jacques-Pepin-Full-Signature-2-600x284.png"><br>
+    <img class="Signature" src="SS_Signature new.png"><br>
     Gurpreet ‘<span class="Sunny">Sunny</span>’ Singh <br>Founder, RoundGlass</p>
     <hr>
     <div class="footer">
