--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ hr{
     display: block;
     max-width: 600px;
     margin-top: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 0px;
     width: 100%;
   height: auto;
 }
@@ -282,7 +282,7 @@ margin-bottom: 24px;
     <h2> <span class="Dear">Dear</span> Rebecca Cooper</h2>
     <h1>“Only those who attempt the absurd can achieve the impossible.”<br><span class="author"><i>Albert Einstein</i></span></h1>
     <div  >
-        <img class="MainIllustration" src="Emailer-Illustration-3.jpg">
+        <img class="MainIllustration" src="Emailer-Illustration-y.jpg">
     </div>
     <p class="hero-body"> Let me take this opportunity to congratulate you on your recent achievement. May you grow in strength and may your impact on the world leave indelible footprints. <br>
         <br>
